<resources>
    <string name="app_name">BoardChanger</string>
    <string name="title_activity_main_feed">MainFeed</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="year_LR">Year</string>
    <string name="name_LR">Name</string>
    <string name="price_LR">Price</string>
    <string name="add_new_board">Add New Board</string>
    <string name="model_AB">Model</string>
    <string name="year_AB">Year</string>
    <string name="asking_price_AB">Asking Price</string>
    <string name="address_AB">Address</string>
    <string name="description_AB">Description</string>
    <string name="description_BD">Description</string>
    <string name="name_BD">Name</string>
    <string name="year_BD">Year</string>
    <string name="price_BD">Price</string>
    <string name="send_message_BD">Send Message</string>
    <string name="address_BD">Address</string>
    <string name="message_title_SM">Message Title:</string>
    <string name="message_body_SM">Message Body:</string>
    <string name="send_SM">Send</string>
    <string name="enter_email_REG">Enter Email</string>
    <string name="enter_password_REG">Enter Password</string>
    <string name="register_REG">Register</string>
    <string name="already_have_an_account_login_REG">already have an account? Login</string>
    <string name="enter_email_LOGIN">Enter Email</string>
    <string name="enter_password_LOGIN">Enter Password</string>
    <string name="login_LOGIN">Login</string>
    <string name="don_t_have_an_account_register_LOGIN">Don\'t have an account? Register</string>
    <string name="enter_name_REG">Enter Name</string>
    <string name="add_profile_image_REG">Add Profile Image</string>
    <string name="board_details_call">CALL</string>
    <string name="phone_number_add_board">Phone Number</string>
    <string name="addButton_list">addImage</string>
    <string name="name_EP">New Name</string>
    <string name="new_password_EP">New Password</string>
    <string name="change_picture_EP">Change Picture</string>
    <string name="save_changes_EP">Save Changes</string>
    <string name="user_boards_title">My Boards</string>
    <string name="edit_board_title">Edit Board</string>
    <string name="delete_EB">Delete</string>

</resources>