<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:layout_marginBottom="20dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:backgroundTint="@color/card_semi_transparent"
    app:cardCornerRadius="25dp"
    app:cardElevation="0dp"
    app:strokeColor="@color/stroke"
    app:strokeWidth="2dp"
    app:cardPreventCornerOverlap="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_margin="3dp"
        android:background="@color/transparent"
        android:padding="8dp">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/listrow_board_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listrow_board_year">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:text="$"
                android:textColor="@color/teal_200"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/listrow_board_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_LR"
                android:textColor="@color/teal_200"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/listrow_image_v"
            android:layout_width="101dp"
            android:layout_height="114dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/board" />

        <TextView
            android:id="@+id/listrow_board_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="2dp"
            android:text="@string/name_LR"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:layout_constraintEnd_toStartOf="@+id/listrow_image_v"
            app:layout_constraintStart_toStartOf="@+id/listrow_board_year"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/listrow_board_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15dp"
            android:text="@string/year_LR"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/listrow_image_v"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listrow_board_name" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>